--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,12 @@
 {
   "name": "angular-pdf-viewer",
-  "version": "0.2.13",
+  "version": "0.2.14",
   "description": "An AngularJS directive to display PDFs",
   "main": "./dist/angular-pdf-viewer.min.js",
   "license": "MIT",
   "homepage": "http://github.com/winkerVSbecks/angular-pdf-viewer",
   "dependencies": {
-    "angular": "^1.3.0",
-    "pdfjs-dist": "^1.7.351"
+    "pdfjs-dist": "2.0.489"
   },
   "ignore": [
     "src",
